correction align cards on center

--- a/src/components/pages/Main/Main.module.css
+++ b/src/components/pages/Main/Main.module.css
@@ -8,6 +8,10 @@
 .card {
     padding-top: 100px;
     grid-column: span 4;
+		display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .descriptionCard01 {
@@ -64,7 +68,7 @@
 
 .generalCards {
     display: grid;
-    grid-template-columns: repeat(12, 120px);
+    grid-template-columns: repeat(12, 8.33%);
     grid-template-rows: auto;
 }
 
